modules/formulize/templates/css/formulize.css
/* ... */
.icon-delete:before {
  content: "\f10b"; }

.icon-download:before {
  content: "\f10c"; }

.icon-edit:before {
  content: "\f10d"; }

.icon-form-mini:before {
  content: "\f10e"; }

.icon-form:before {
  content: "\f10f"; }

.icon-help:before {
  content: "\f110"; }

.icon-home:before {
  content: "\f111"; }

.icon-lock-unlocked:before {
  content: "\f112"; }

.icon-lock:before {
  content: "\f113"; }

.icon-magnifier:before {
  content: "\f114"; }

.icon-menu:before {
  content: "\f115"; }

.icon-permission:before {
  content: "\f116"; }

.icon-piechart:before {
  content: "\f117"; }

.icon-print:before {
  content: "\f118"; }

.icon-relationship:before {
  content: "\f119"; }

.icon-screen-form:before {
  content: "\f11a"; }

.icon-screen-list:before {
  content: "\f11b"; }

.icon-screen:before {
  content: "\f11c"; }

.icon-table:before {
  content: "\f11d"; }

.icon-trash:before {
  content: "\f11e"; }

.icon-view:before {
  content: "\f11f"; }



.formulize_button {
  text-indent: 30px;
  border-color: #0076a3;
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
  font-size: 15px;
  font-weight: bold;
  height: 36px;
  width: 185px !important; }

#prev {
  background: #008CC4 url("../../images/prev.png") no-repeat 10px;
  text-indent: 40px;
  height: 36px;
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
  font-size: 15px; }

#next {
  background: #008CC4 url("../../images/next.png") no-repeat 140px;
  text-align: left;
  width: 185px;
  height: 36px;
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
  font-size: 15px; }



.formulize-page-navigation {
  display: inline-block;
  margin: 1em 1em 1em 0;
  padding: 0.6em;
  background-color: #f7f7f7;
  border-radius: 4px; }

.page-navigation-label {
  margin-right: 1em; }

.formulize-page-navigation a {
  margin: 0 0.1em;
  padding: 0.4em 0.5em;
  font-weight: normal; }

.formulize-page-navigation a.page-navigation-active {
  background-color: #fff;
  border: 1px solid #70b640;
  border-radius: 4px; }

.page-navigation-total {
  color: #555;
  white-space: nowrap; }

a.tooltip {
  font-family: "formulize-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  text-decoration: inherit;
  font-size: 11pt;
  cursor: help;
  position: relative;
  background: transparent;
  background-color: transparent; }

a.tooltip:before {
  content: "\f110";
  font-size: 15pt;
  color: #59a7d4; }

a.tooltip > span {
  display: none; }

a.tooltip:hover {
  background: transparent;
  background-color: transparent; }

a.tooltip:hover > span {
  position: absolute;
  top: 2em;
  left: -5em;
  width: 25em;
  display: block;
  background-color: #ffffff;
  color: #000;
  padding: 1.5em;
  line-height: 1.5em;
  opacity: 0.95;
  border: 2px solid #59a7d4;
  border-radius: 6px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3); }

a.formulize-open-close-link {
  cursor: pointer; }

.icms_checkboxoption {
  clear: both; }

#floating-list-of-entries-save-button {
  padding: 0.5em 1.5em;
  margin: 1em 0;
  background-color: #FFF; }

#floating-list-of-entries-save-button.save_button_fixed {
  position: fixed;
  bottom: 0;
  z-index: 100;
  margin-top: 0;
  margin-bottom: 0;
  border-top: solid 1px #1D65A5;
  border-left: solid 1px #1D65A5;
  border-right: solid 1px #1D65A5;
  border-radius: 5px 5px 0 0; }

.floating-column {
  position: fixed;
  border: 1px solid white;
  display: none;
  padding: 0px !important; }

.floating-column .main-cell-div {
  float: left;
  border: 1px solid white;
  padding: 5px; }

#currentview {
  width: 500px;
  font-size: 1.2em; }

.formulize-subform-table {
  width: auto;
  border-collapse: collapse; }

.formulize-subform-table > tbody > tr > th {
  background-color: transparent !important;
  color: black !important;
  text-align: center;
  border-bottom: 1px solid #d1d1df; }

.formulize-subform-table > tbody > tr > td {
  padding: 0.5em;
  border-bottom: 1px dotted #d1d1df; }

/*=== Formulize Boutons by Francois T ===*/
button, input[type='submit'], input[type='button'], input[type='reset'] {
  background-color: #F4F9FE;
  -webkit-border-radius: 5px;
  color: #2F85DC;
  border: 1px solid;
  border-color: #ccc; }

button:hover, .xo-formbuttons:hover, .formButton:hover {
  transform: scale(1.2);
  box-shadow: 0 0 65px #F4F9FE inset, 0 0 20px #F4F9FE inset, 0 0 15px #333; }

button:focus, input[type='submit']:focus, input[type='button']:focus, input[type='reset']:focus, .xo-formbuttons:focus, .formButton:focus {
  background-color: #f4f4f4;
  border-color: #333; }

/*=== Formulize Boutons by Francois T ===*/
#formulize_addButton, #formulize_addProxyButton {
  text-indent: 45px;
  background: #2F85DC url("../../images/contact-new.png") no-repeat 10px;
  width: 210px !important; }

#formulize_addMultiButton {
  text-indent: 45px;
  background: #2F85DC url("../../images/multi.png") no-repeat 10px;
  width: 210px !important; }

#formulize_changeColsButton {
  background: #61A6EE url("../../images/table.png") no-repeat 10px; }

#formulize_exportButton {
  background: #2F85DC url("../../images/math.png") no-repeat 10px; }

#formulize_exportCalcsButton {
  background: #2F85DC url("../../images/math.png") no-repeat 10px; }

#formulize_importButton {
  background: #2F85DC url("../../images/import.png") no-repeat 10px; }

#formulize_calcButton, #formulize_advCalcButton, #formulize_advSearchButton {
  border-color: #8E8E8E;
  background: #A3A3A3 url("../../images/calculator.png") no-repeat 10px; }

#formulize_selectAllButton {
  background: #3CA683 url("../../images/select.png") no-repeat 10px; }

#formulize_clearSelectButton {
  background: #3CA683 url("../../images/unselect.png") no-repeat 10px; }

#formulize_deleteButton {
  background: #3CA683 url("../../images/delete.png") no-repeat 10px; }
/* ... */

